--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,6 @@ html {
     scroll-behavior: smooth;
     font-size: 16px;
     line-height: 1.5;
-    cursor: none;
-    /* Hide default cursor */
 }
 
 body {
@@ -31,7 +29,7 @@ body {
 
 a,
 button {
-    cursor: none;
+    cursor: pointer;
 }
 
 a {
@@ -46,7 +44,6 @@ ul {
 button {
     border: none;
     background: none;
-    cursor: pointer;
     font-family: inherit;
 }
 
